k8s-config/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: game-ingress
  annotations:

    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: killer-game.local 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
        
          service:
            name: backend    
            port:
              number: 3000
